Agregando detalles de contacto

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <a href="#home" class="nav__link">
+                    <a href="https://wa.me/+51997714171" target="_blank" class="nav__link">
                         <li class="nav__item"> 
                             Contactenos
                          </li>
