Agregando primera version en produccion aceptada por el cliente

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <a href="https://wa.me/+51997714171" target="_blank" class="nav__link">
-                        <li class="nav__item"> 
+                        <li class="nav__item uppercase"> 
                             Contactenos
                          </li>
                     </a>
                     <a href="#platforms" class="nav__link">
-                        <li class="nav__item txt">
+                        <li class="nav__item uppercase">
                             Plataformas
                         </li>
                     </a>   
@@ -138,7 +138,7 @@
                     <img loading="lazy"  src="./assets/img/icons/disney_plus.png" class="platform__img" id="disney_plus">
                     <div class="platform__description">
                         <p>
-                            Plataforma de streaming de tus historias facoritas. Nunca te aburrirás con el entretenimiento sin fin de Disney, Pixar, Marvel, Star Wars y National Geographic: estrenos, clásicos, series, películas originales y mucho más, todo en tu pantalla.
+                            Plataforma de streaming de tus historias favoritas. Nunca te aburrirás con el entretenimiento sin fin de Disney, Pixar, Marvel, Star Wars y National Geographic: estrenos, clásicos, series, películas originales y mucho más, todo en tu pantalla.
                         </p>
                     </div>
 
@@ -164,7 +164,9 @@
                 <div class="platform__card">
                     <img loading="lazy"  src="./assets/img/icons/star_plus.png" class="platform__img" id="star_plus">
                     <div class="platform__description">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos repellendus dicta eligendi, ab cum iusto porro dolore provident. </p>
+                        <p>
+                            Queremos que encuentres estrenos de series y películas, y los deportes en vivo de ESPN. Películas, series, todos los episodios de Los Simpson y los deportes en vivo de ESPN.
+                        </p>
                     </div>
     
                     <button id="openModal" class="platform__button starplus_button">
@@ -436,46 +438,46 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Individual</h3>
+                                <h3 class="text-color-white uppercase">Plan Star Plus I</h3>
                             </div>
                             <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>9.90</b></p>
+                                <p class="platform_data_price"><span>S/.</span><b>8.00</b></p>
                                 <p class="platform_data_retail txt-first-color">Mensual</p>
                                 <div class="platform_data_details">
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> 1 Dispositivo</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> 1 Pantalla</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> Cuenta Compartida</p>
                                 </div>
                             </div> 
                          </div>
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Dúo</h3>
+                                <h3 class="text-color-white uppercase">Plan Star Plus II</h3>
                             </div>
                             <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>14.90</b></p>
+                                <p class="platform_data_price"><span>S/.</span><b>13.50</b></p>
                                 <p class="platform_data_retail txt-first-color">Mensual</p>
                                 <div class="platform_data_details">
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> 1 Dispositivo</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> 2 Pantallas</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> Cuenta Compartida</p>
                                 </div>
                             </div> 
                          </div>
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Familiar</h3>
+                                <h3 class="text-color-white uppercase">Plan Star Plus III</h3>
                             </div>
                             <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>30.00</b></p>
+                                <p class="platform_data_price"><span>S/.</span><b>17.00</b></p>
                                 <p class="platform_data_retail txt-first-color">Mensual</p>
 
                                 <div class="platform_data_details">
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> 1 Dispositivo</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> 4 Pantallas</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> Cuenta Personal</p>
                                 </div>
                             </div> 
                          </div>
@@ -727,7 +729,7 @@
                                 <h3 class="text-color-white uppercase">Plan Familiar x3</h3>
                             </div>
                             <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>9.90</b></p>
+                                <p class="platform_data_price"><span>S/.</span><b>62.90</b></p>
                                 <p class="platform_data_retail txt-first-color">por 3 Meses</p>
 
                                 <div class="platform_data_details">
@@ -824,7 +826,9 @@
                 <div class="platform__card">
                     <img loading="lazy"  src="./assets/img/icons/spotify.png" class="platform__img" id="spotify">
                     <div class="platform__description">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos repellendus dicta eligendi, ab cum iusto porro dolore provident. </p>
+                        <p>En Spotify puedes encontrar toda la música que necesitas con millones de canciones y podcasts en cualquier lugar.
+                            Podemos activar tu cuenta o nosotros entregarte una cuenta.
+                        </p>
                     </div>
 
                     <button id="openModal" class="platform__button spotify_button">
@@ -836,7 +840,9 @@
                 <div class="platform__card">
                     <img loading="lazy" src="./assets/img/icons/youtube_premium.png" class="platform__img" id="hbo_max">
                     <div class="platform__description">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos repellendus dicta eligendi, ab cum iusto porro dolore provident. </p>
+                        <p>Proporciona transmisión sin publicidad de todos los videos alojados en Youtube,contenido original exclusivo.
+                            Youtube y Youtube Music sin anuncios ni conexion y en segundo plano.La activación con su mismo correo gmail.
+                        </p>
                     </div>
 
                     <button id="openModal" class="platform__button youtube_premium_button">
@@ -848,7 +854,9 @@
                 <div class="platform__card">
                     <img loading="lazy"  src="./assets/img/icons/tidal_hifi.png" class="platform__img" id="tidal_hifi">
                     <div class="platform__description">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos repellendus dicta eligendi, ab cum iusto porro dolore provident. </p>
+                        <p>
+                            Es el primer servicio global de streaming de música con sonido de <b>alta fidelidad</b>, calidad de vídeo de alta definición, junto con listas de reproducción seleccionadas por expertos y contenido original
+                        </p>
                     </div>
 
                     <button id="openModal" class="platform__button tida_hifi_button">
@@ -866,7 +874,11 @@
                 <div class="platform__card">
                     <img loading="lazy"  src="./assets/img/icons/mov_play.png" class="platform__img" id="mov_play">
                     <div class="platform__description">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos repellendus dicta eligendi, ab cum iusto porro dolore provident. </p>
+                        <p>
+                            Incluye canales en vivo y un catalogo con peliculas, series y contenido infantil, entre otros.
+                            Puedes Disfrutarlo en tu Smart TV, TV Box, dispositivos moviles Android y iOS, asi como tu computadora
+                            de escritorio o portátil.
+                        </p>
                     </div>
 
                     <button id="openModal" class="platform__button movistar_play_button">
@@ -878,7 +890,11 @@
                 <div class="platform__card">
                     <img loading="lazy" src="./assets/img/icons/ultra_play.png" class="platform__img" id="ultra_play">
                     <div class="platform__description">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias eos repellendus dicta eligendi, ab cum iusto porro dolore provident. </p>
+                        <p><b>Canales 4K, SD & HD</b></p>
+                        <p>1000 Canales de todos los generos, incluidos Canales Premium y Eventos. Mas de 19000 peliculas, series y karaoke EPG.</p>
+                        <p><b>Compatibilidad</b></p>
+                        <p>Puedes disfrutarlo en tu Smart TV, TV Box, dispositivos Android y iOS, PC.</p>
+                        <p><b>Puedes pedir un demo y ver el servicio que ofrecemos</b></p>
                     </div>
 
                     <button id="openModal" class="platform__button ultra_play_button">
