--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                 <div class="platform__card">
                     <img loading="lazy" src="./assets/img/icons/hbo_max.png" class="platform__img" id="hbo_max">
                     <div class="platform__description">
-                        <p>Sé parte de los universos de Warner Bros., DC Comics, HBO, Cartoon Network y mucho más. Los precios en promocion solo es válido hasta el 31 de Julio.</p>
+                        <p>
+                            Sé parte de los universos de Warner Bros., DC Comics, HBO, Cartoon Network y mucho más.
+                        </p>
                     </div>
 
                     <button id="openModal" class="platform__button hbo_button">
@@ -152,7 +154,7 @@
                     <img loading="lazy"  src="./assets/img/icons/prime_video.png" class="platform__img" id="prime_video">
                     <div class="platform__description">
                         <p> 
-                            La plataforma contiene un numero reducido de peliculs y series comparada con servicios similares por el que su catalogo actual es bastante limitado. La activación dependerá en el dispositivo que usted indique.
+                            La plataforma contiene un número reducido de peliculas y series comparada con servicios similares por el que su catálogo actual es bastante limitado. La activación dependerá en el dispositivo que usted indique.
                         </p>
                     </div>
     
@@ -192,7 +194,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Individual</h3>
+                                <h3 class="text-color-white uppercase">Individual</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>9.90</b></p>
@@ -207,7 +209,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Dúo</h3>
+                                <h3 class="text-color-white uppercase">Dúo</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>14.90</b></p>
@@ -222,7 +224,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Familiar</h3>
+                                <h3 class="text-color-white uppercase">Familiar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>30.00</b></p>
@@ -256,7 +258,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Individual</h3>
+                                <h3 class="text-color-white uppercase">Individual</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>7.90</b></p>
@@ -271,10 +273,10 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Familiar</h3>
+                                <h3 class="text-color-white uppercase">Familiar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>19.90</b></p>
+                                <p class="platform_data_price"><span>S/.</span><b>16.90</b></p>
                                 <p class="platform_data_retail txt-first-color">Mensual</p>
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 3 Dispositivos</p>
@@ -306,7 +308,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Individual</h3>
+                                <h3 class="text-color-white uppercase">Individual</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>6.90</b></p>
@@ -321,7 +323,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Estándar</h3>
+                                <h3 class="text-color-white uppercase">Estándar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>10.90</b></p>
@@ -336,7 +338,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Familiar</h3>
+                                <h3 class="text-color-white uppercase">Familiar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>14.90</b></p>
@@ -372,7 +374,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Individual</h3>
+                                <h3 class="text-color-white uppercase">Individual</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>5.90</b></p>
@@ -387,7 +389,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Estándar</h3>
+                                <h3 class="text-color-white uppercase">Estándar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>9.90</b></p>
@@ -402,7 +404,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Familiar</h3>
+                                <h3 class="text-color-white uppercase">Familiar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>12.90</b></p>
@@ -438,7 +440,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Star Plus I</h3>
+                                <h3 class="text-color-white uppercase">Star Plus I</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>8.00</b></p>
@@ -453,7 +455,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Star Plus II</h3>
+                                <h3 class="text-color-white uppercase">Star Plus II</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>13.50</b></p>
@@ -468,7 +470,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Star Plus III</h3>
+                                <h3 class="text-color-white uppercase">Star Plus III</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>17.00</b></p>
@@ -506,32 +508,32 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Individual</h3>
+                                <h3 class="text-color-white uppercase">Individual</h3>
                             </div>
                             <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>9.90</b></p>
+                                <p class="platform_data_price"><span>S/.</span><b>8.90</b></p>
                                 <p class="platform_data_retail txt-first-color">Mensual</p>
                                 <div class="platform_data_details">
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> Activa 1 cuenta</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Descargas</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Sin anuncios</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Youtube Music</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Estándar</h3>
+                                <h3 class="text-color-white uppercase">Estándar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>17.90</b></p>
+                                <p class="platform_data_price"><span>S/.</span><b>14.90</b></p>
                                 <p class="platform_data_retail txt-first-color">Mensual</p>
                                 <div class="platform_data_details">
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> Activa 2 cuentas</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Descargas</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Sin anuncios</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Youtube Music</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -557,49 +559,32 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">1 Cuenta Individual</h3>
+                                <h3 class="text-color-white uppercase">Individual</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>7.90</b></p>
                                 <p class="platform_data_retail txt-first-color">Mensual</p>
                                 <div class="platform_data_details">
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> 1 Cuenta Personal</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Salto de canciones</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Descarga tu música</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Sin anuncios</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 días</p>
                                 </div>
                             </div> 
                          </div>
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">1 Cuenta Individual</h3>
-                            </div>
-                            <div class="plaftorm_plan_data">
-                                <p class="platform_data_price"><span>S/.</span><b>12.90</b></p>
-                                <p class="platform_data_retail txt-first-color">por 2 Meses</p>
-                                <div class="platform_data_details">
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Salto de canciones</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Descarga tu música</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Sin anuncios</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 60 días</p>
-                                </div>
-                            </div> 
-                         </div>
-
-                         <div class="platform_plan">
-                            <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">2 Cuentas</h3>
+                                <h3 class="text-color-white uppercase">Dúo</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>9.90</b></p>
-                                <p class="platform_data_retail txt-first-color">Mensual</p>
-
+                                <p class="platform_data_retail txt-first-color">por 2 Meses</p>
                                 <div class="platform_data_details">
+                                    <p class="data_detail"><i class="far fa-check-circle"></i> 2 Cuenta Personales</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Salto de canciones</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Descarga tu música</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Sin anuncios</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 60 días</p>
                                 </div>
                             </div> 
                          </div>
@@ -696,7 +681,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Estándar</h3>
+                                <h3 class="text-color-white uppercase">Estándar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>19.90</b></p>
@@ -711,7 +696,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Familiar</h3>
+                                <h3 class="text-color-white uppercase">Familiar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>27.90</b></p>
@@ -726,7 +711,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Familiar x3</h3>
+                                <h3 class="text-color-white uppercase">Familiar x3</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>62.90</b></p>
@@ -761,7 +746,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Individual</h3>
+                                <h3 class="text-color-white uppercase">Individual</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>9.90</b></p>
@@ -776,7 +761,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Estándar</h3>
+                                <h3 class="text-color-white uppercase">Estándar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>12.90</b></p>
@@ -791,7 +776,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Plan Familiar</h3>
+                                <h3 class="text-color-white uppercase">Familiar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>17.90</b></p>
@@ -840,9 +825,9 @@
                 <div class="platform__card">
                     <img loading="lazy" src="./assets/img/icons/youtube_premium.png" class="platform__img" id="hbo_max">
                     <div class="platform__description">
-                        <p>Proporciona transmisión sin publicidad de todos los videos alojados en Youtube,contenido original exclusivo.
-                            Youtube y Youtube Music sin anuncios ni conexion y en segundo plano.La activación con su mismo correo gmail.
-                        </p>
+                        <p>No más anuncios.</p>
+                        <p>Activa tu cuenta Gmail con nosotros, y obtén el servicio Premium.</p>
+                        <p>Los Planes Incluyen YouTube Music, aplicacion similar a Spotify.</p>
                     </div>
 
                     <button id="openModal" class="platform__button youtube_premium_button">
