Agregando emoji de smartphone a subtitle css

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img src="./assets/img/banner/BANNER.png" class="home__img" >
             <div class="home__container container grid">
                 <div class="home__data">
-                    <span class="home__data-subtitle">Todo lo que necesitas en un solo lugar</span>
+                    <p class="home__data_container-subtitle"><b class="home__data-subtitle">Todo lo que necesitas en un solo lugar </b> <span class="icon-phone">📱</span></p>
                     <p class="home__data-title">
                         <span class="text-bold">Escoge el
                             <b class="txt-first-color">Mejor Plan</b> 
