--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.facebook.com/Ultraplayperu28" target="_blank" class="home__social-link">
+                    <a href="https://www.facebook.com/UltraPlay-Perú-1677559848978265/" target="_blank" class="home__social-link">
                         <i class="fab fa-facebook-square"></i>                  
                     </a>
                     <a href="https://www.instagram.com/somos.premiumpe/?hl=es" target="_blank" class="home__social-link">
@@ -441,7 +441,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Star Plus I</h3>
+                                <h3 class="text-color-white uppercase">Individual</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>8.00</b></p>
@@ -456,7 +456,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Star Plus II</h3>
+                                <h3 class="text-color-white uppercase">Dúo</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>13.50</b></p>
@@ -471,7 +471,7 @@
 
                          <div class="platform_plan">
                             <div class="platform_plan_title">
-                                <h3 class="text-color-white uppercase">Star Plus III</h3>
+                                <h3 class="text-color-white uppercase">Familiar</h3>
                             </div>
                             <div class="plaftorm_plan_data">
                                 <p class="platform_data_price"><span>S/.</span><b>17.00</b></p>
