Agregando seccion de instrucciones, sin cobro 2

--- a/index.html
+++ b/index.html
@@ -100,6 +100,43 @@
             </div>
         </section>
 
+        <section class="instruct section">
+            <div class="instruct__container container grid">
+                <div class="intruct__card">
+                    <div class="instruct_card-icon">
+                        <i class="far fa-hand-point-up text-color-white" ></i>
+                    </div>
+                    <div class="instruct__card-title">
+                        <h1 class="text-color-white">ELIGE TU CUENTA</h1>
+                    </div>
+                    <div class="instruct__card-description">
+                        <p class="text-color-white">Elige algunos de los planes que ofrecemos.</p>
+                    </div>
+                </div>
+                <div class="intruct__card">
+                    <div class="instruct_card-icon">
+                        <i class="far fa-credit-card text-color-white"></i>
+                    </div>
+                    <div class="instruct__card-title ">
+                        <h1 class="text-color-white">REALIZA EL DEPÓSITO</h1>
+                    </div>
+                    <div class="instruct__card-description">
+                        <p class="text-color-white">Realiza el pago mediante deposito a la cuenta que se te dara al contactarte con nosotros por whatsapp.</p>
+                    </div>
+                </div>
+                <div class="intruct__card">
+                    <div class="instruct_card-icon">
+                        <i class="fas fa-user-check text-color-white"></i>
+                    </div>
+                    <div class="instruct__card-title ">
+                        <h1 class="text-color-white">RECIBE TU CUENTA</h1>
+                    </div>
+                    <div class="instruct__card-description">
+                        <p class="text-color-white">Recibe tu cuenta dentro del horario de atención</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!--================ PLANS ================-->
         <section class="platform section" id="platforms"> 
@@ -267,7 +304,7 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 1 Dispositivo</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 dias</p>              
+                                                   
                                 </div>
                             </div> 
                          </div>
@@ -282,7 +319,7 @@
                                 <div class="platform_data_details">
                                     <p class="data_detail"><i class="far fa-check-circle"></i> 3 Dispositivos</p>
                                     <p class="data_detail"><i class="far fa-check-circle"></i> Calidad Ultra HD</p>
-                                    <p class="data_detail"><i class="far fa-check-circle"></i> Duración 30 dias</p>
+                                     
                                 </div>
                             </div> 
                          </div>
